manifests/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remotelab-ingress
  namespace: applications
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: applications-strip-django@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - localhost
    secretName: remotelab-tls
  rules:
  - http:
      paths:
      - path: /django
        pathType: Prefix
        backend:
          service:
            name: django
            port:
              number: 8000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-django
  namespace: applications
spec:
  stripPrefix:
    prefixes:
      - /django
